Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3.2
-
None
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest/builds/10072/steps/test_2/logs/stdio
sys_vars.log_slow_admin_statements_func 'innodb' w3 [ fail ]
|
Test ended at 2017-09-02 15:21:43
|
|
|
CURRENT_TEST: sys_vars.log_slow_admin_statements_func
|
--- /mnt/buildbot/build/mariadb-10.3.2/mysql-test/suite/sys_vars/r/log_slow_admin_statements_func.result 2017-09-02 12:56:48.000000000 -0400
|
+++ /mnt/buildbot/build/mariadb-10.3.2/mysql-test/suite/sys_vars/r/log_slow_admin_statements_func.reject 2017-09-02 15:21:43.124060071 -0400
|
@@ -27,10 +27,14 @@
|
OPTIMIZE TABLE log_slow_admin_statements;
|
Table Op Msg_type Msg_text
|
test.log_slow_admin_statements optimize note Table does not support optimize, doing recreate + analyze instead
|
-test.log_slow_admin_statements optimize status OK
|
+test.log_slow_admin_statements optimize error Got error 192 'Table encrypted but decryption failed. This could be because correct encryption management plugin is not loaded, used encryption key is not available or encryption method does not match.' from InnoDB
|
+test.log_slow_admin_statements optimize status Operation failed
|
+Warnings:
|
+Error 1296 Got error 192 'Table encrypted but decryption failed. This could be because correct encryption management plugin is not loaded, used encryption key is not available or encryption method does not match.' from InnoDB
|
CHECK TABLE log_slow_admin_statements EXTENDED;
|
Table Op Msg_type Msg_text
|
-test.log_slow_admin_statements check status OK
|
+test.log_slow_admin_statements check Warning InnoDB: Index PRIMARY is marked as corrupted
|
+test.log_slow_admin_statements check error Corrupt
|
DROP TABLE log_slow_admin_statements;
|
SELECT sql_text FROM mysql.slow_log WHERE sql_text LIKE '%TABLE log_slow_admin_statements%';
|
sql_text
|
|
|
mysqltest: Result length mismatch
|
Attachments
Issue Links
- is caused by
-
MDEV-13654 Various crashes due to DB_TRX_ID mismatch in table-rebuilding ALTER TABLE…LOCK=NONE
-
- Closed
-